feat: finalize ui and implementations

--- a/KikoGuide/Resources/Localization/Strings.resx
+++ b/KikoGuide/Resources/Localization/Strings.resx
@@ -117,22 +117,169 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Guide Viewer Command Help" xml:space="preserve">
+  <data name="Commands_GuideViewer_Help" xml:space="preserve">
     <value>Toggle the guide viewer window.</value>
   </data>
-  <data name="Settings Command Help" xml:space="preserve">
-    <value>Toggle the settings window.</value>
-  </data>
-  <data name="Guide List Command Help" xml:space="preserve">
+  <data name="Commands_GuideList_Help" xml:space="preserve">
     <value>Toggles the guide list window.</value>
   </data>
-  <data name="Settings Window Title" xml:space="preserve">
-    <value>[{0}] Settings</value>
+  <data name="Windows_PluginSettings_Title" xml:space="preserve">
+    <value>[{0}] Plugin Settings</value>
   </data>
-  <data name="Gudie List Window Title" xml:space="preserve">
+  <data name="Windows_GuideList_Title" xml:space="preserve">
     <value>[{0}] Guide List</value>
   </data>
-  <data name="Guide Viewer Window Title" xml:space="preserve">
+  <data name="Windows_GuideViewer_Title" xml:space="preserve">
     <value>[{0}] Guide Viewer</value>
+  </data>
+  <data name="Windows_Integrations_Title" xml:space="preserve">
+    <value>[{0}] Integrations</value>
+  </data>
+  <data name="Windows_GuideSettings_Title" xml:space="preserve">
+    <value>[{0}] Guide Settings</value>
+  </data>
+  <data name="Guide_NoConfig" xml:space="preserve">
+    <value>There are no configuration options for this guide type.</value>
+  </data>
+  <data name="Commands_GuideViewer_NoGuide" xml:space="preserve">
+    <value>Unable to open the guide viewer window without a guide selected.</value>
+  </data>
+  <data name="Guide_NotMetRequirements" xml:space="preserve">
+    <value>You do not meet the requirements to view this guide.</value>
+  </data>
+  <data name="Errors_DrawFailed" xml:space="preserve">
+    <value>UI draw failed due to an error! [{0}] {1}!</value>
+  </data>
+  <data name="Guide_InstanceContent_AvailableForDuty" xml:space="preserve">
+    <value>A guide for {0} is available! Use {1} to view it.</value>
+  </data>
+  <data name="Integrations_NoConfig" xml:space="preserve">
+    <value>There are no configuration options for this integration.</value>
+  </data>
+  <data name="Integrations_ForceDisabled" xml:space="preserve">
+    <value>An error occured with this integration. It has been automatically disabled until the next plugin reload. Please check Dalamud's logs for more information.</value>
+  </data>
+  <data name="Integrations_Enabled" xml:space="preserve">
+    <value>Enabled</value>
+  </data>
+  <data name="Integrations_ActiveStatus_False" xml:space="preserve">
+    <value>This integration is waiting to activate.</value>
+  </data>
+  <data name="Integrations_ActiveStatus_True" xml:space="preserve">
+    <value>This integration has successful activated and is ready to use.</value>
+  </data>
+  <data name="UserInterface_Integrations_Title" xml:space="preserve">
+    <value>Integrations</value>
+  </data>
+  <data name="UserInterface_GuideSettings_Title" xml:space="preserve">
+    <value>Guide Settings</value>
+  </data>
+  <data name="UserInterface_GuideList_NoneFound" xml:space="preserve">
+    <value>No guides were found for the filter criteria.</value>
+  </data>
+  <data name="UserInterface_GuideList_NoneUnlocked_Heading" xml:space="preserve">
+    <value>No guides unlocked</value>
+  </data>
+  <data name="UserInterface_GuideList_NoneUnlocked_Body" xml:space="preserve">
+    <value>You have not unlocked any guides yet! Try progressing through the games main scenario quests to unlock some.</value>
+  </data>
+  <data name="UserInterface_GuideList_NoLogin_Title" xml:space="preserve">
+    <value>Not logged in</value>
+  </data>
+  <data name="UserInterface_GuideList_NoLogin_Body" xml:space="preserve">
+    <value>Please log in to a character in order to view guides.</value>
+  </data>
+  <data name="UserInterface_GuideList_Search_Heading" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="UserInterface_GuideList_SearchHint" xml:space="preserve">
+    <value>Search for guide...</value>
+  </data>
+  <data name="UserInterface_GuideList_DifficultyFilter_Heading" xml:space="preserve">
+    <value>Difficulty</value>
+  </data>
+  <data name="UserInterface_GuideList_DifficultyFilter_Any" xml:space="preserve">
+    <value>Any</value>
+  </data>
+  <data name="UserInterface_GuideList_Contributing_Heading" xml:space="preserve">
+    <value>Contributing</value>
+  </data>
+  <data name="UserInterface_GuideList_Contributing_Guides" xml:space="preserve">
+    <value>Create/Edit Guides</value>
+  </data>
+  <data name="UserInterface_GuideList_Contributing_Translate" xml:space="preserve">
+    <value>Help Translate</value>
+  </data>
+  <data name="UserInterface_GuideList_Contributing_Donate" xml:space="preserve">
+    <value>Support the Developer</value>
+  </data>
+  <data name="UserInterface_GuideList_Configuration_Heading" xml:space="preserve">
+    <value>Configuration</value>
+  </data>
+  <data name="UserInterface_GuideList_Configuration_Plugin" xml:space="preserve">
+    <value>Plugin Settings</value>
+  </data>
+  <data name="UserInterface_GuideList_Configuration_Integrations" xml:space="preserve">
+    <value>Manage Integrations</value>
+  </data>
+  <data name="UserInterface_GuideList_Configuration_Guide" xml:space="preserve">
+    <value>Guide Settings</value>
+  </data>
+  <data name="Guide_InstanceContent_Mechanics_Name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="Guide_InstanceContent_Mechanics_Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="Guide_InstanceContent_Mechanics_Heading" xml:space="preserve">
+    <value>Mechanics</value>
+  </data>
+  <data name="Guide_InstanceContent_Content_Heading" xml:space="preserve">
+    <value>Content</value>
+  </data>
+  <data name="Guide_InstanceContent_Tips_Heading" xml:space="preserve">
+    <value>Tips</value>
+  </data>
+  <data name="Guide_InstanceContent_Links_Heading" xml:space="preserve">
+    <value>Links</value>
+  </data>
+  <data name="Guide_InstanceContent_Note_Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="Guide_InstanceContent_Note_Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
+  <data name="Guide_InstanceContent_Note_Heading" xml:space="preserve">
+    <value>Note</value>
+  </data>
+  <data name="Guide_InstanceContent_TypeName" xml:space="preserve">
+    <value>Instance Content Guide</value>
+  </data>
+  <data name="Guide_InstanceContent_UnnamedInstance" xml:space="preserve">
+    <value>An Unnamed Instance</value>
+  </data>
+  <data name="UserInterface_Integrations_About_Body" xml:space="preserve">
+    <value>Integrations provide extra functionality on top of the plugin, like working with other plugins to provide new features. Integrations can be enabled or disabled at any time safely and are controlled by the plugin developer.</value>
+  </data>
+  <data name="UserInterface_Integrations_About_Heading" xml:space="preserve">
+    <value>Explaination</value>
+  </data>
+  <data name="UserInterface_GuideSettings_About_Body" xml:space="preserve">
+    <value>Guide settings allow for you to modify the behaviour of each "type" of guide. For example, you could modify "Instance" guides to automatically open when you enter a duty, or "FATE" guides to automatically show up when you enter the FATE.</value>
+  </data>
+  <data name="UserInterface_GuideSettings_About_Title" xml:space="preserve">
+    <value>Explaination</value>
+  </data>
+  <data name="UserInterface_Integrations_Configure_Heading" xml:space="preserve">
+    <value>Integration Configuration</value>
+  </data>
+  <data name="Integrations_Wotsit_Description" xml:space="preserve">
+    <value>Register guides with Wotsit so they can be opened via search.</value>
+  </data>
+  <data name="UserInterface_PluginSettings_NoConfig" xml:space="preserve">
+    <value>There are no configuration options available at the moment, please check back another time.</value>
+  </data>
+  <data name="UserInterface_PluginSettings_General_Heading" xml:space="preserve">
+    <value>General</value>
   </data>
 </root>
