--- a/KikoGuide/Resources/Localization/Strings.fr.resx
+++ b/KikoGuide/Resources/Localization/Strings.fr.resx
@@ -318,4 +318,13 @@
   <data name="UserInterface_PluginSettings_Title" xml:space="preserve">
     <value>Paramètres du plugin</value>
   </data>
+  <data name="Guide_Common_Phase" xml:space="preserve">
+    <value>Phase</value>
+  </data>
+  <data name="Guide_Common_Encounter" xml:space="preserve">
+    <value>Rencontre</value>
+  </data>
+  <data name="Guide_Common_Section" xml:space="preserve">
+    <value>Section</value>
+  </data>
 </root>
